k8s-branch/front/legacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdrace-ingress
spec:
  ingressClassName: istio
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pdclient
        backend:
          service:
            name: pdclient-svc
            port:
              number: 31191
